tests/baselines/reference/systemJsForInNoException(strict=true).errors.txt
systemJsForInNoException.ts(3,17): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{ a: number; }'.
  No index signature with a parameter of type 'string' was found on type '{ a: number; }'.


==== systemJsForInNoException.ts (1 errors) ====
    export const obj = { a: 1 };
    for (var key in obj)
        console.log(obj[key]);
                    ~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{ a: number; }'.
!!! error TS7053:   No index signature with a parameter of type 'string' was found on type '{ a: number; }'.